Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25035

Setting condition for breakpoint via context menu in breakpoints view doesn't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • None
    • Qt Creator 4.15.0-beta1
    • Debugger
    • None
    • Debian testing with Qt Creator built from git master as of commit b281d6f00af6a3ceb590ac4cd58fc297bae882c9;
      GDB 10.1
    • Linux/X11
    • 28e8538227f3e0347a09f336b6cf17982bd93f87

      Trying to set a condition for a breakpoint fails when the dialog to edit the breakpoint is opened via context menu in the breakpoints view.

      Steps to reproduce:

      1. set up a project with the simple attached sample program that increments a variable in a loop)
      2. set a breakpoint at line 9 ("i++;")
      3. start debugger -> it stops at the breakpoint
      4. right-click on the breakpoint in the breakpoints view
      5. select "Edit selected Breakpoints..." in the context menu
      6. enter condition: "i == 50"
      7. press "OK" to close the dialog
      8. check the value in the "Condition" column for the breakpoint in the breakpoints view
      9. press F5 to continue debugging and check value of variable "i" when debugger stops again

      Result:

      • at step 8: the column is empty
      • at step 9: the value of "i" is 1

      Expected result:

      Since the condition "i == 50" was set for the breakpoint:

      • at step 8: the column should contain the condition: "i == 50"
      • at step 9: the value of "i" should be 50, since that is the condition for which the breakpoint should be stopped at

        For Gerrit Dashboard: QTCREATORBUG-25035
        # Subject Branch Project Status CR V

            hjk hjk
            michaelweghorn Michael Weghorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes